--- a/src/styles.css
+++ b/src/styles.css
@@ -174,6 +174,9 @@ body{
 
   .confetti-container{
     position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
 
   @media (min-width: 900px){
